ChangeLog for ircd-seven
========================

This file lists every change made except typo and formatting fixes, which are
only listed in SVN log. For a summary of what has changed between releases,
see the NEWS file.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	doc/example.conf, doc/reference.conf, modules/m_connect.c
	modules/core/m_squit.c: Replace 'remote' operflag with 'routing',
	which allows local and remote CONNECT/SQUIT.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c, src/s_user.c,
	modules/core/m_message.c, modules/m_wallops.c: Add 'wallops' and
	'mass_notice' operflags. Remove 'nick_changes'; it will be replaced
	later by allowed snomasks.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* modules/core/m_sjoin.c: Don't deop override opers on sjoin unless
	they're actually opped.

2006-09-23 Elfyn McBratney <beu@freenode.net>

	* src/match.c, src/s_user.c: Make '/' a "valid" host character.

2006-09-23 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	modules/m_resv.c: Resurrect the 'resv' operflag, to allow use of RESV.

2006-09-23 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	modules/m_kline.c, modules/m_rehash.c, modules/m_resv.c,
	modules/m_xline.c: Remove remoteban priv. It's now implicit in being
	able to ban.

2006-09-23 Stephen Bennett <spb@gentoo.org>

	* include/client.h, include/s_newconf.h, src/newconf.c, src/s_user.c,
	src/s_newconf.c, doc/reference.conf, modules/core/m_kick.c: Add umode
	+m for immunity from kick, controlled by 'immune' operflag.

2006-09-23 Stephen Bennett <spb@gentoo.org>

	* include/newconf.h, include/channel.h, include/s_newconf.h,
	src/chmode.c, src/channel.c, modules/m_topic.c: Implement 'override'
	oper flag.

2006-09-23 Stephen Bennett <spb@gentoo.org>

	* modules/m_stats.c, include/s_conf.h, include/client.h,