@@ -195,9 +195,7 @@ operator "god" {
          * Available options:
          *
          * encrypted:    the password above is encrypted [DEFAULT]
-         * local_kill:   allows local users to be /KILL'd
-         * global_kill:  allows local and remote users to be 
-         *               /KILL'd                           (OLD 'O' flag)
+         * kill:         allows local and remote users to be /KILL'd
          * routing:      allows local and remote SQUIT and CONNECT
          * kline:        allows KILL, KLINE and DLINE      (OLD 'K' flag)
          * unkline:      allows UNKLINE and UNDLINE        (OLD 'U' flag)
@@ -223,7 +221,7 @@ operator "god" {
          * mass_notice:  Allow sending notices and privmsgs to hostmasks as
                          well as nicks.
          */
-        flags = global_kill, routing, kline, unkline,
+        flags = kill, routing, kline, unkline,
                 die, rehash, admin, xline, operwall,
                 set_cmodes, wallops, mass_notice;
 };
