@@ -362,9 +362,7 @@ operator "god" {
          * Available options:
          *
          * encrypted:    the password above is encrypted [DEFAULT]
-         * local_kill:   allows local users to be /KILL'd
-         * global_kill:  allows local and remote users to be 
-         *               /KILL'd                           (OLD 'O' flag)
+         * kill:         allows local and remote users to be /KILL'd
          * remote:       allows remote SQUIT and CONNECT   (OLD 'R' flag)
          * kline:        allows KILL, KLINE and DLINE      (OLD 'K' flag)
          * unkline:      allows UNKLINE and UNDLINE        (OLD 'U' flag)
