@@ -73,9 +73,9 @@ mo_kill(struct Client *client_p, struct Client *source_p, int parc, const char *
 
 	user = parv[1];
 
-	if(!IsOperLocalKill(source_p))
+	if(!IsOperKill(source_p))
 	{
-		sendto_one(source_p, form_str(ERR_NOPRIVS), me.name, source_p->name, "local_kill");
+		sendto_one(source_p, form_str(ERR_NOPRIVS), me.name, source_p->name, "kill");
 		return 0;
 	}
 
@@ -108,13 +108,6 @@ mo_kill(struct Client *client_p, struct Client *source_p, int parc, const char *
 		}
 		sendto_one(source_p, ":%s NOTICE %s :KILL changed from %s to %s",
 			   me.name, parv[0], user, target_p->name);
-	}
-
-	if(!MyConnect(target_p) && (!IsOperGlobalKill(source_p)))
-	{
-		sendto_one(source_p, ":%s NOTICE %s :Nick %s isnt on your server",
-			   me.name, parv[0], target_p->name);
-		return 0;
 	}
 
 	if(MyConnect(target_p))
