@@ -312,8 +312,7 @@ static struct mode_table umode_table[] = {
 
 static struct mode_table flag_table[] = {
 	{"encrypted",		OPER_ENCRYPTED		},
-	{"local_kill",		OPER_LOCKILL		},
-	{"global_kill",		OPER_GLOBKILL|OPER_LOCKILL	},
+	{"kill",		OPER_KILL		},
 	{"routing",		OPER_ROUTING		},
 	{"kline",		OPER_KLINE		},
 	{"unkline",		OPER_UNKLINE		},
